--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html dir="ltr" lang="en">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
@@ -8,34 +9,37 @@
 
   <style>
     .default {
-      background-color:#44c767;
-      border-radius:10px;
-      border:1px solid #18ab29;
-      cursor:pointer;
-      color:#ffffff;
-      font-family:Arial;
-      font-size:17px;
-      padding:16px 31px;
-      text-decoration:none;
-      text-shadow:0px 1px 0px #2f6627;
+      background-color: #44c767;
+      border-radius: 10px;
+      border: 1px solid #18ab29;
+      cursor: pointer;
+      color: #ffffff;
+      font-family: Arial;
+      font-size: 17px;
+      padding: 16px 31px;
+      text-decoration: none;
+      text-shadow: 0px 1px 0px #2f6627;
     }
+
     .default:hover {
-      background-color:#5cbf2a;
+      background-color: #5cbf2a;
     }
-    .default:focus, .default:active {
-      outline:0;
+
+    .default:focus,
+    .default:active {
+      outline: 0;
     }
 
     .container {
       min-height: 400px;
       display: flex;
-      display: -webkit-flex;
       flex-wrap: wrap;
-      flex-direction: column;
-      justify-content: center;
+      flex-direction: row;
+      justify-content: space-between;
       align-items: center;
       align-content: center;
     }
+
     .item {
       flex: 0 0 auto;
       margin: 5px;
@@ -43,6 +47,7 @@
   </style>
 
 </head>
+
 <body>
 
   <div class="container">
@@ -58,52 +63,53 @@
         </ul>
       </div>
     </wtech-popover>
-    <wtech-popover show-backdrop="false"  id="noBackdrop">
-        <div slot="title">
-          <button class="default item">no backdrop</button>
-        </div>
-        <div slot="content">
-          <ul>
-            <li>toto1</li>
-            <li>toto2</li>
-            <li>toto3</li>
-          </ul>
-        </div>
-      </wtech-popover>
-      <wtech-popover backdrop-dismiss="false" id="noTap">
-          <div slot="title">
-            <button class="default item">no tappable</button>
-          </div>
-          <div slot="content">
-            <ul>
-              <li>tutu1</li>
-              <li>tutu2</li>
-              <li>tutu3</li>
-            </ul>
-          </div>
-        </wtech-popover>
-        <wtech-popover animated="false">
-            <div slot="title">
-              <button class="default item">without animation</button>
-            </div>
-            <div slot="content">
-              <ul>
-                <li>tata1</li>
-                <li>tata2</li>
-                <li>tata3</li>
-              </ul>
-            </div>
-          </wtech-popover>
-    </div>
+    <wtech-popover show-backdrop="false" id="noBackdrop">
+      <div slot="title">
+        <button class="default item">no backdrop</button>
+      </div>
+      <div slot="content">
+        <ul>
+          <li>toto1</li>
+          <li>toto2</li>
+          <li>toto3</li>
+        </ul>
+      </div>
+    </wtech-popover>
+    <wtech-popover backdrop-dismiss="false" id="noTap">
+      <div slot="title">
+        <button class="default item">no tappable</button>
+      </div>
+      <div slot="content">
+        <ul>
+          <li>tutu1</li>
+          <li>tutu2</li>
+          <li>tutu3</li>
+        </ul>
+      </div>
+    </wtech-popover>
+    <wtech-popover animated="false">
+      <div slot="title">
+        <button class="default item">without animation</button>
+      </div>
+      <div slot="content">
+        <ul>
+          <li>tata1</li>
+          <li>tata2</li>
+          <li>tata3</li>
+        </ul>
+      </div>
+    </wtech-popover>
+  </div>
 
-    <script>
-      const popover = document.querySelector('#noTap');
-      popover
-        .querySelectorAll('li')
-        .forEach(el => el.addEventListener('click', () => {
-          popover.dismiss();
-        })
+  <script>
+    const popover = document.querySelector('#noTap');
+    popover
+      .querySelectorAll('li')
+      .forEach(el => el.addEventListener('click', () => {
+        popover.dismiss();
+      })
       )
-    </script>
+  </script>
 </body>
+
 </html>
